--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -1,1 +1,8 @@
-h
+{% extends './base.html' %}
+{%load static%}
+
+{%block title%}Home{% endblock%}
+
+{%block content%}
+   hello page 
+{%endblock%}
