--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -36,7 +36,7 @@
 
                             </div>
                             <div class="col-6 text-end"><button type="button" class="btn btn-secondary btn-sm">Add to
-                                    basket</button></div>
+                                    cart</button></div>
                         </div>
                     </div>
                 </div>
