--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -43,7 +43,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <a type="button" role="button" href="{% url "cart:cart_summary" %}"
+                    {% comment %} <a type="button" role="button" href="{% url "cart:cart_summary" %}"
                         class="btn btn-outline-secondary">
 
                         {% comment %} {% with total_qty=basket|length %}
@@ -62,7 +62,7 @@
                                 d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
                         </svg>
                         Cart
-                    </a>
+                    </a> 
                 </div>
             </div>
         </nav>
