--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -1,48 +1,52 @@
-
-
-{% extends "./base.html" %}
-{% load static %}
-{% block title %}
-{{ product.name }}
-{% endblock %}
-{% block content %}
+{% extends "./base.html" %} {% load static %} {% block title %} {{ product.name
+}} {% endblock %} {% block content %}
 <div class="container">
-    <main class="pt-5">
-        <div class="row g-3">
-            <div class="col-md-5 col-lg-5 order-md-first bg-light">
-                <img class="img-fluid mx-auto d-block" width="800px" alt="Responsive image" src="{{ product.image.url }}">
+  <main class="pt-5">
+    <div class="row g-3">
+      <div class="col-md-5 col-lg-5 order-md-first bg-light">
+        <img
+          class="img-fluid mx-auto d-block"
+          width="800px"
+          alt="Responsive image"
+          src="{{ product.image.url }}"
+        />
+      </div>
+      <div class="col-md-7 col-lg-7 ps-md-3 ps-lg-5">
+        <h1 class="mb-0 h4">{{ product.title }}</h1>
+        <p><span class="lead">{{ product.created_by}}</span> (seller)</p>
+        <p>{{ product.description|slice:":355" }}...</p>
+        <div class="border">
+          <div class="col border-bottom">
+            <div class="row p-3">
+              <div class="col-6"></div>
+              <div class="col-6 text-end">
+                <span class="h4 fw-bold">£{{ product.price }}</span>
+              </div>
             </div>
-            <div class="col-md-7 col-lg-7 ps-md-3 ps-lg-5">
-                <h1 class="mb-0 h4">{{ product.title }}</h1>
-                <p><span class="lead">{{ product.created_by}}</span> (seller)</p>
-                <p>{{ product.description|slice:":355" }}...</p>
-                <div class="border">
-                    <div class="col border-bottom">
-                        <div class="row p-3">
-                            <div class="col-6"></div>
-                            <div class="col-6 text-end"><span class="h4 fw-bold">£{{ product.price }}</span></div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="row p-3">
-                            <div class="col-6">
-                                <label for="select">Qty</label>
-                                <select id="select">
-                                    <option value="">1</option>
-                                    <option value="">2</option>
-                                    <option value="">3</option>
-                                    <option value="">4</option>
-                                </select>
-
-                            </div>
-                            <div class="col-6 text-end"><button type="button" class="btn btn-secondary btn-sm">Add to
-                                    cart</button></div>
-                        </div>
-                    </div>
-                </div>
+          </div>
+          <div class="col">
+            <div class="row p-3">
+              <div class="col-6">
+                <label for="select">Qty</label>
+                <select id="select">
+                  <option value="">1</option>
+                  <option value="">2</option>
+                  <option value="">3</option>
+                  <option value="">4</option>
+                </select>
+              </div>
+              <a
+                href="{{ object.get_add_to_cart_url }}"
+                class="btn btn-primary btn-md my-0 p"
+              >
+                Add to cart
+                <i class="fas fa-shopping-cart ml-1"></i>
+              </a>
             </div>
+          </div>
         </div>
-    </main>
-
+      </div>
+    </div>
+  </main>
 </div>
 {% endblock %}
