solved bug when adding item in cart

--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -35,10 +35,9 @@
                   <option value="">4</option>
                 </select>
               </div>
-              <a
-                href="{{ object.get_add_to_cart_url }}"
-                class="btn btn-primary btn-md my-0 p"
-              >
+
+
+              <a href="{{ product.get_add_to_cart_url }}" class="btn btn-primary btn-md my-0 p">
                 Add to cart
                 <i class="fas fa-shopping-cart ml-1"></i>
               </a>
