--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -41,6 +41,13 @@
                 Add to cart
                 <i class="fas fa-shopping-cart ml-1"></i>
               </a>
+
+              <a href="{{ product.get_remove_from_cart_url }}" class="btn btn-danger btn-md my-0 p">
+                Remove from cart 
+                {% comment %} <i class="fas fa-shopping-cart ml-1"></i> {% endcomment %}
+              </a>
+
+                    
             </div>
           </div>
         </div>
