--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -43,26 +43,41 @@
                             </ul>
                         </li>
                     </ul>
-                    {% comment %} <a type="button" role="button" href="{% url "cart:cart_summary" %}"
-                        class="btn btn-outline-secondary">
+                    {% if user.is_authenticated%}  
 
-                        {% comment %} {% with total_qty=basket|length %}
-                            <div id="basket-qty" class="d-inline-flex">
-                                {% if total_qty > 0 %}
-                                    {{ total_qty }}
-                                {% else %}
-                                    0
-                                {% endif %}
-                            </div>
-                        {% endwith %}  {% endcomment %}
+                      {% comment %} <a class="nav-item nav-link" href="{%url 'profile'%}">Profile</a> {% endcomment %}
+                      <a class="nav-item nav-link" href="{%url 'logout'%}">Logout</a>
 
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-cart3" viewBox="0 0 16 16">
-                            <path
-                                d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                        </svg>
-                        Cart
-                    </a> 
+
+                      <a type="button" role="button" href="{% url "cart:order-summary" %}"
+                      class="btn btn-outline-secondary">
+
+                      {% comment %} {% with total_qty=basket|length %}
+                          <div id="basket-qty" class="d-inline-flex">
+                              {% if total_qty > 0 %}
+                                  {{ total_qty }}
+                              {% else %}
+                                  0
+                              {% endif %}
+                          </div>
+                      {% endwith %}  {% endcomment %}
+
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                          class="bi bi-cart3" viewBox="0 0 16 16">
+                          <path
+                              d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                      </svg>
+                      Cart
+                  </a> 
+                      
+                    {% else %}
+                      <a class="nav-item nav-link" href="{%url 'login'%}">Login</a>
+                      <a class="nav-item nav-link" href="{%url 'register'%}">Register</a>
+                    {% endif %}  
+
+
+                    
+                   
                 </div>
             </div>
         </nav>
@@ -77,6 +92,10 @@
     </div>
     {% endfor %}
 {% endif %}
+
+
+<
+
     <div id="content">{% block content %} {% endblock %}</div>
 </body>
 </html>
