--- a/store/templates/store/category.html
+++ b/store/templates/store/category.html
@@ -2,7 +2,7 @@
 {%block content%}
 <main>
 
-    <section class="py-5 text-center container">
+    {% comment %} <section class="py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1 class="fw-light">Welcome</h1>
@@ -13,7 +13,9 @@
           </p>
         </div>
       </div>
-    </section>
+    </section> {% endcomment %}
+
+    
   
     <div class="album py-5 bg-light">
       <div class="container">
