--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html "%}
+{% extends "store/base.html "%}
 {% block content %} `
 <div class="content-section">
    <div class="media">
