--- a/cart/templates/cart/order_summary.html
+++ b/cart/templates/cart/order_summary.html
@@ -16,38 +16,25 @@
           <div class="col-md-5 col-lg-4 order-md-last">
             <h4 class="d-flex justify-content-between align-items-center mb-3">
               <span class="text-primary">Your cart</span>
-              <span class="badge bg-primary rounded-pill">3</span>
+              <span class="badge bg-primary rounded-pill">{{orders.get_num_of_cart_items}}</span>
             </h4>
             <ul class="list-group mb-3">
+           
+              {% for order_item in orders.items.all %}
 
               <li class="list-group-item d-flex justify-content-between lh-sm">
                 <div>
-                  <h6 class="my-0">Product name X 2</h6>
-                  <small class="text-muted">Brief description</small>
+                  <h6 class="my-0">{{order_item.item.title}} X {{ order_item.quantity}}</h6>
+                  <small class="text-muted">{{order_item.item.description}}</small>
                 </div>
-                <span class="text-muted">$12</span>
+                <span class="text-muted">${{order_item.get_price_of_product}}</span>
               </li>
 
-              <li class="list-group-item d-flex justify-content-between lh-sm">
-                <div>
-                  <h6 class="my-0">Second product</h6>
-                  <small class="text-muted">Brief description</small>
-                </div>
-                <span class="text-muted">$8</span>
-              </li>
-
-              <li class="list-group-item d-flex justify-content-between lh-sm">
-                <div>
-                  <h6 class="my-0">Third item</h6>
-                  <small class="text-muted">Brief description</small>
-                </div>
-                <span class="text-muted">$5</span>
-              </li>
-
+               {% endfor %}
      
               <li class="list-group-item d-flex justify-content-between">
                 <span>Total (USD)</span>
-                <strong>$20</strong>
+                <strong>${{orders.get_total_price_of_cart}}</strong>
               </li>
             </ul>
     
