--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -26,7 +26,9 @@
                             <a class="nav-link" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                           
+                            <a class="nav-link" href="{{ address.get_absolute_update_url }}">Update Your Address</a>
+                            
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
