--- a/user/templates/user/register_address.html
+++ b/user/templates/user/register_address.html
@@ -8,7 +8,7 @@
                  {{form.as_p }}                 
              </fieldset>
              <div class ="form-group">
-                 <button class="btn btn-outline-info" type="submit">Post</button>
+                 <button class="btn btn-outline-info" type="submit">Register</button>
              </div>
          </form>
          
