order-checkout fn working

--- a/cart/templates/cart/order_summary.html
+++ b/cart/templates/cart/order_summary.html
@@ -70,7 +70,7 @@
 
               <hr class="my-4">
     
-              <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
+              <button class="w-100 btn btn-primary btn-lg" type="submit"> <a href ="{% url 'cart:final-checkout' %}">Place order</a> </button>
             </form>
           </div>
         </div>
