previous orders being shown

--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -47,7 +47,7 @@
                     </ul>
                     {% if user.is_authenticated%}  
 
-                      {% comment %} <a class="nav-item nav-link" href="{%url 'profile'%}">Profile</a> {% endcomment %}
+                      <a class="nav-item nav-link" href="{%url 'profile'%}">Profile</a>
                       <a class="nav-item nav-link" href="{%url 'logout'%}">Logout</a>
 
 
