--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -1,14 +1,27 @@
 {% extends "store/base.html "%}
 {% block content %} `
+<h1>Profile</h1>
 <div class="content-section">
    <div class="media">
       <div class="media-body">
-         <h2 class="account-heading">{{user.username}}</h2>
+         <h5 class="account-heading">{{user.username}}</h5>
          <p class="text-secondary">{{user.email}}</p>
       </div>
    </div>
 
+<h2>Your previous orders</h2>
+  {% for order_qs in total_orders %}
+  <li class="list-group-item d-flex justify-content-between lh-sm">
+   <div>
+     <h6 class="my-0"> {{order_qs.ordered_date}} </h6>
+   </div>
 
+   <small class="text-muted">{{order_qs.get_num_of_cart_items}}</small>
+   <span class="text-muted">{{order_qs.get_total_price_of_cart}}</span>
+
+ </li>
+
+  {% endfor %}
 
 </div>
 {% endblock content%}
