--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -77,6 +77,7 @@
                       <a class="nav-item nav-link" href="{%url 'register'%}">Register</a>
                     {% endif %}  
 
+                    <a class="nav-item nav-link" href="{%url 'vendor:become-vendor'%}">Become Vendor</a>
 
                     
                    
