--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -77,10 +77,13 @@
                       <a class="nav-item nav-link" href="{%url 'register'%}">Register</a>
                     {% endif %}  
 
-                    <a class="nav-item nav-link" href="{%url 'vendor:become-vendor'%}">Become Vendor</a>
+                  
 
-                    
-                   
+                    {% if request.user.is_authenticated%}
+                    <a class="nav-item nav-link" href="{%url 'vendor:vendor-profile'%}"> Vendor Profile</a>
+                    {% else %}
+                    <a class="nav-item nav-link" href="{%url 'vendor:become-vendor'%}">Become Vendor</a>
+                    {% endif %}
                 </div>
             </div>
         </nav>
