--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -44,8 +44,19 @@
 
               <a href="{{ product.get_remove_from_cart_url }}" class="btn btn-danger btn-md my-0 p">
                 Remove from cart 
-                {% comment %} <i class="fas fa-shopping-cart ml-1"></i> {% endcomment %}
+                
               </a>
+              
+
+              <h3>Product Reviews </h3>
+
+
+              <div class="feature col">
+               
+                 {%for review in reviews%}
+                <p> -> {{review.description}}</p>
+                 {% endfor %}
+              </div>
 
                     
             </div>
