--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -48,6 +48,7 @@
                     {% if user.is_authenticated%}  
 
                       <a class="nav-item nav-link" href="{%url 'profile'%}">Profile</a>
+                      <a class="nav-item nav-link" href="{%url 'cart:wishlist'%}">Wishlist</a>
                       <a class="nav-item nav-link" href="{%url 'logout'%}">Logout</a>
 
 
