--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -42,6 +42,11 @@
                 <i class="fas fa-shopping-cart ml-1"></i>
               </a>
 
+              <a href="{{ product.get_add_to_wishlist_url}}" class="btn btn-primary btn-md my-0 p">
+                Add to wishlist
+                <i class="fas fa-shopping-cart ml-1"></i>
+              </a>
+
               {% comment %} <a href="{{ product.get_remove_from_cart_url }}" class="btn btn-danger btn-md my-0 p">
                 Remove from cart 
                 
