--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -24,6 +24,7 @@
               <div class="card-body">
                 <p class="card-text">
                   <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}"">{{ product.title }}</a>
+                  {% comment %} <a  href="{%url 'cart:add-to-wishlist' product.slug%}">Wishlist</a> {% endcomment %}
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <small class="text-muted">${{product.price}}</small>
