--- a/cart/templates/cart/order_summary.html
+++ b/cart/templates/cart/order_summary.html
@@ -46,27 +46,21 @@
            
           </div>
    
-   {% if address%}       
+   {% if user_detail%}       
    <h4>Your Shipping Address</h4>
           <li class="list-group-item d-flex justify-content-between lh-sm">
             <div>
-              <h6 class="my-0">{{address.apartment}} </h6>             
-              <h6 class="my-0">{{address.street}} </h6>
-              <h6 class="my-0">{{address.city}} </h6>
-              <small class="text-muted">{{address.pin}}</small>
+              <h6 class="my-0">{{user_detail.apartment}} </h6>             
+              <h6 class="my-0">{{user_detail.street}} </h6>
+              <h6 class="my-0">{{user_detail.city}} </h6>
+              <small class="text-muted">{{user_detail.pincode}}</small>
             </div>
-            <span class="text-muted">${{address.country}}</span>
+            <span class="text-muted">${{user_detail.country}}</span>
           </li>
 
-          {% comment %} <a href={% url 'update-address' address.id %}>Update the Address</a> {% endcomment %}
+          {% comment %} <a href={% url 'update-user_detail' user_detail.id %}>Update the user_detail</a> {% endcomment %}
 
      {% endif %}    
-
-      {% if not address%}
-         <a href={% url 'register-address' %}>Add an Address</a>
-         {% endif %}
- 
-
 
               <hr class="my-4">
     
