--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-white border-bottom">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">LEZ GO</a>
+                <a class="navbar-brand" href="#">SHOP</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -37,11 +37,13 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="{% url "store:home_products" %}">All</a></li>
-                                  {% for c in categories %}
-                                 <li {% if category.slug == c.slug %}class="selected" {% endif %}> 
+                                {% comment %} {% if catgeories%}  
+                                 {% for c in categories %}
+                                  <li {% if category.slug == c.slug %}class="selected" {% endif %}> 
                                    <a class="dropdown-item" href="{{ c.get_absolute_url }}">{{ c.name|title }}</a> 
-                                </li>
-                                {% endfor %}  
+                                  </li>
+                                 {% endfor %}  
+                                {% endif %} {% endcomment %}
                             </ul>
                         </li>
                     </ul>
