--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -1,4 +1,4 @@
-{% extends "store/base.html "%}
+{% extends 'store/base.html '%}
 {% block content %} `
 <h1>Profile............Balance :- {{profile_balance.balance}}</h1>
 <div class="content-section">
