--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -1,4 +1,5 @@
-{% extends 'store/base.html '%}
+{% extends 'store/base.html' %} 
+{% load static %}
 {% block content %} `
 <h1>Profile............Balance :- {{profile_balance.balance}}</h1>
 <div class="content-section">
