--- a/user/templates/user/register_address.html
+++ b/user/templates/user/register_address.html
@@ -1,4 +1,5 @@
 {% extends "store/base.html"%}
+{% load static %}
   {% block content %}   `
      <div class ="content-section">
          <form method="POST">
