--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -35,9 +35,9 @@
      {% for order_item in order_qs.return_order_items %}
      <small class="text-muted">Title:- {{order_item.item.title}}</small>
      
-     {% if user.review %}
+     {% comment %} {% if order_item.user.review %}
        <h6>You already have a review</h6>
-     {% else%}
+     {% else%} {% endcomment %}
      <a href = "{% url 'write-review' order_item.get_product_slug%}">Write Review</a>
      {%endif%}
 
